# engine

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
characters/: holo.yaml
models/: character.py  context.py  llm_function.py  message.py  payload.py  request.py  response.py  system_prompt.py
plugin_system/: call_builder.py  hook.py  plugin_manager.py
plugin_system/abc/: __init__.py  channel_reciver.py  channel_sender.py  emitter.py  llm.py  llm_function.py  memory.py  plugin.py  reciver.py  sys_prompt.py  system_prompt_module.py  workflow.py
plugins_builtin/basic_character_descriptions/: __init__.py  plugin.py
plugins_builtin/channel_discord/: __init__.py  discord_plugin.py
plugins_builtin/date_time_prompt/: __init__.py  plugin.py
plugins_builtin/default_workflow/: __init__.py  plugin.py  pyproject.toml
plugins_builtin/discord_channel/: discord_plugin.py  pyproject.toml
plugins_builtin/llm_anthropic/: __init__.py  anthropic_llm.py  prompts.py
plugins_builtin/memory_inmemory/: __init__.py  inmemory.py
plugins_builtin/memory_simple/: __init__.py  simple_memory.py
plugins_builtin/sys_prompt_chara_descriptions/: __init__.py  basic_character_description.py  character_description.py
plugins_builtin/sys_prompt_date_time/: __init__.py  date_time.py
plugins_builtin/workflow_default/: __init__.py  default_workflow.py
tests/: test_plugin_manager.py
utilities/: config_loader.py  logging.py  version.py
