[tool.poetry]
name = "engine"
version = "0.1.0"
description = ""
authors = ["Christopher Schmitt <mail@christopher.gg>"]
readme = "README.md"
package-mode = false

[project]
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.3"
typer = "^0.12.3"
pendulum = "^3.0.0"
setuptools = "^72.0.0"
pyyaml = "^6.0.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

colorlog = "^6.8.2"
discord-py-interactions = "^5.12.1"
anyio = "^4.4.0"
anthropic = "^0.33.0"
pydantic-settings = "^2.3.4"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F","RUF","C901", "W", "I", "UP", "PLE", "PLR", "PLW", "B", "A", "COM", "EM", "PYI", "Q", "RET", "SIM", "ARG", "PTH", "N","ANN", "S", "BLE","FBT", "TRY", "N", "PT"]
ignore = ["ANN101"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts ="--cov=. --cov-report xml"
